--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div id="puzzle"></div>
     <button id="solve-button">Solve</button>
+    <p id="solution"></p>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
